--- a/templates/employees.html
+++ b/templates/employees.html
@@ -52,7 +52,7 @@
           </td>
           <td class="actions">
             <a href="{{ url_for('edit_employee', id=emp.id) }}" class="btn-small btn-warning">✏ Edit</a>
-            <form action="{{ url_for('delete_employee', id=emp.id) }}" method="POST" onsubmit="return confirm('Delete this employee?')" style="display:inline;">
+            <form action="{{ url_for('employees', id=emp.id) }}" method="POST" onsubmit="return confirm('Delete this employee?')" style="display:inline;">
               <button type="submit" class="btn-small btn-danger">🗑 Delete</button>
             </form>
           </td>
@@ -69,3 +69,4 @@
 
 
 {% endblock %}
+
