--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -6,6 +6,8 @@
     <title>{% block title %}REAL PROMOTION ERP{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
     
     <style>
         /* --- Google Font & General Styles --- */
@@ -207,4 +209,5 @@
 {% block page_scripts %}{% endblock %}
 </body>
 </html>
+
 
