--- a/templates/morning.html
+++ b/templates/morning.html
@@ -106,6 +106,7 @@
 </script>
 
 <!-- ✅ CORRECT JS FILE -->
-<script src="{{ url_for('static', filename='js/allocation_js.js') }}"></script>
+<script src="{{ url_for('static', filename='js/morning.js') }}"></script>
 
 {% endblock %}
+
