--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -9,7 +9,7 @@
           Link now points to 'add_product_form'
       =========================================
     -->
-    <a href="{{ url_for('add_product_form') }}" class="add-btn">+ Add Product</a>
+    <a href="{{ url_for('add_product') }}" class="add-btn">+ Add Product</a>
 </div>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/inventory.css') }}">
 
@@ -74,3 +74,4 @@
 </div>
 
 {% endblock %}
+
