--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/inventory.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <script src="{{ url_for('static', filename='js/eve.js') }}"></script>
 
 <div class="form-card">
@@ -9,12 +9,12 @@
 
     <!-- 
       =========================================
-          THE ROBUST FIX (Bug 1)
+          THE ROBUST FIX 
           Added the 'action' to the form tag.
       =========================================
     -->
-    <form id="add_product" 
-          action="{{ url_for('add_product') }}" 
+    <form id="addProductForm" 
+          action="{{ url_for('add_product_action') }}" 
           method="POST" 
           enctype="multipart/form-data">
         
@@ -50,4 +50,3 @@ function previewImage(event) {
 }
 </script>
 {% endblock %}
-
