--- a/templates/employees.html
+++ b/templates/employees.html
@@ -6,7 +6,7 @@
   <div class="page-header">
     <h2>👥 Employee Management</h2>
     <!-- This link is now correct -->
-    <a href="{{ url_for('add_employee_form') }}" class="btn-primary">➕ Add Employee</a>
+    <a href="{{ url_for('add_employee') }}" class="btn-primary">➕ Add Employee</a>
   </div>
 
   <div class="table-wrapper">
@@ -72,4 +72,5 @@
   </div>
 </section>
 {% endblock %}
+
 
