--- a/templates/employees.html
+++ b/templates/employees.html
@@ -50,7 +50,7 @@
             {% endfor %}
         </select>
 
-        <a href="{{ url_for('add_employee_form') }}" class="btn-primary add-btn">➕ Add Employee</a>
+        <a href="{{ url_for('add_employee') }}" class="btn-primary add-btn">➕ Add Employee</a>
     </div>
 
     <!-- ✅ Employee Grid Cards -->
@@ -87,6 +87,7 @@
 
 </section>
 {% endblock %}
+
 
 
 
